	* parser.y: FR #167 added ACUCOBOL CONTROL KEY as PENDING

2017-12-11  Edward Hart <edward.dan.hart@gmail.com>

	* config.def, field.c, parser.y: added binary-comp-1 option (feature
	  request #272).
	* pplex.l, ppparse.y: added COMP1 directive.
	* ppparse.y: removed redundant checks for well-formed literals.
	* ppparse.y: slightly improved error messages for invalid directives.

2017-12-10  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (get_reserved_words_with_amendments): no longer ignore
	  user-specified aliases for default reserved words.
	* pplex.l, ppparse.y, reserved.c, scanner.l: added support for MF's
	  reserved word directives ADDRSV, ADDSYN, MAKESYN, OVERRIDE and REMOVE.

2017-12-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, tree.c, tree.h, typeck.c: minor adjustments after merge
	  of reportwriter branch
	* codegen.c: adjustments after merge of reportwriter branch for
	  refactored code parts (no additional refactoring so far)
	* cobc.c (cobc_enum_explain): added CB_TAG_REPORT_LINE
	* cobc.c (process_run) [_WIN32]: change / in given output name to \

2017-12-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (build_evaluate): error position improvement for
	  "wrong number of WHEN parameters"

2017-12-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.def, parser.y: FR #158 added cb_perform_varying_without_by
	* parser.y: FR #168 adding missing compile time checks for
	  PERFORM BY ZERO

2017-12-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: FR 259 delete temporary files as soon as possible:
	  moved cleanup of intermediates for a single processed file
	  from (cobc_clean_up) to (clean_up_intermediates) and call this in
	  main after processing the single file
	* parser.y, typeck.c: fixed some errors spotted by COB_TREE_DEBUG

2017-11-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
